deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dejavu-tacos-frontend
  namespace: temporal-dejavu-tacos
  labels:
    app: dejavu-tacos
spec:
  type: ClusterIP
  selector:
    app: dejavu-tacos
    component: frontend
  ports:
    - name: http
      port: 80
      targetPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: temporal-dejavu-tacos
  labels:
    app: dejavu-tacos
spec:
  type: ClusterIP
  selector:
    app: dejavu-tacos
    component: backend
  ports:
    - name: http
      port: 8000
      targetPort: 8000
